# AKADION_RAG

./: .dockerignore  .env.example  .gitignore  DOCUMENTATIE_RAG.md  Dockerfile  README.md  docker-compose.yml  llm_service.py  main.py  models.py  prompt_builder.py  requirements.txt  reranker_service.py  retrieval_service.py  security_guard.py  test_post_chat.py
embedder_service/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
embedder_service/fastapi_app/: __init__.py  main.py  models.py
embedder_service/fastapi_app/routes/: __init__.py  documents.py  health.py  query.py
embedder_service/fastapi_app/services/: __init__.py  chunker.py  embedder.py  pdf_extractor.py  qdrant_client.py
embedder_service/fastapi_app/utils/: __init__.py  config.py  logger.py
embedder_service/tests/: test_services.py
reranker-service/: Dockerfile  main.py  models.py  proba_reranker.py  pyproject.toml
